:art: optimize statscard

--- a/src/app/page/statscard/statscard.component.html
+++ b/src/app/page/statscard/statscard.component.html
@@ -1,8 +1,8 @@
-<nz-content>
+<div class='stats-card'>
     <span class="title">{{scTitle}}</span>
     <span class="value">{{scValue}}</span>
     <div class="progress">
         <nz-progress [nzPercent]='scPercent' [nzShowInfo]=false [nzStrokeWidth]=3></nz-progress>
     </div>
     <span class="top">{{scPercent}}%</span>
-</nz-content>
+</div>
