--- a/src/app/page/statscard/statscard.component.css
+++ b/src/app/page/statscard/statscard.component.css
@@ -1,5 +1,8 @@
-span {
-    color: #ffffff;
+div.stats-card {
+    background-color: #ffffff;
+    /*border: black;*/
+    /*border-style: outset;*/
+    /*border-width: thin;*/
 }
 
 span.title {
@@ -10,9 +13,9 @@ span.value {
     float: right;
 }
 
-nz-content {
+nz-card {
     width: 100%;
-    height: 30px;
+    height: 60px;
 }
 
 span {
@@ -21,4 +24,8 @@ span {
 
 div.progress {
     padding: 0 6px 0 6px;
+}
+
+nz-content {
+    background-color: #ffffff;
 }
