:sparkles: add new statscard

--- a/src/app/page/statscard/statscard.component.css
+++ b/src/app/page/statscard/statscard.component.css
@@ -1,31 +1,83 @@
-div.stats-card {
-    background-color: #ffffff;
-    /*border: black;*/
-    /*border-style: outset;*/
-    /*border-width: thin;*/
+::ng-deep .ant-card-body {
+    padding: 0 0 0 0px;
 }
 
-span.title {
-    float: left;
+::ng-deep .ant-card-head {
+    padding: 0 24px 0 12px;
 }
 
-span.value {
-    float: right;
+.stats {
+    width: 330px;
 }
 
-nz-card {
+ul {
+    list-style: none;
     width: 100%;
-    height: 60px;
+    padding: 0;
 }
 
-span {
-    margin: 0 6px 0 6px;
+li {
+    width: 50%;
+    float: left;
+    display: table;
 }
 
-div.progress {
-    padding: 0 6px 0 6px;
+li:nth-child(2n-1) {
+    border-right: 1px solid #eaeaea;
 }
 
-nz-content {
-    background-color: #ffffff;
+.stats_key {
+    width: 104px;
+    padding-left: 10px;
+    height: 28px;
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 12px;
+}
+
+.stats_value {
+    width: auto;
+    height: auto;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
+}
+
+.stats_key--imp {
+    line-height: 14px;
+    width: auto;
+    height: auto;
+    padding: 9px 10px 0 10px;
+    display: block;
+    color: #000000;
+}
+
+.stats_value--imp {
+    width: auto;
+    height: auto;
+    padding: 9px 10px 0 10px;
+    display: block;
+    font-size: 16px;
+}
+
+.stats_item:nth-child(4n-1) {
+    background-color: #f6f6f6;
+
+}
+
+.stats_item:nth-child(4n) {
+    background-color: #f6f6f6;
+}
+
+.icon {
+    width: 16px;
+    height: 16px;
+}
+
+.title {
+    padding-left: 6px;
+}
+
+.blank-stats {
+    height: 168px;
 }
