:wrench: add ng material for custom icon

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         </nz-breadcrumb>
         <div
             style="background:#fff; padding: 24px; min-height: 280px; width: auto;max-width: 1200px; margin: 0 auto;">
-            <app-recordcard></app-recordcard>
+            <app-statscard></app-statscard>
         </div>
     </nz-content>
     <nz-footer style="text-align: center;">Not affiliated with PLAYERUNKNOWN'S BATTLEGROUNDS, PUBG
