--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,3 +11,42 @@ nz-footer {
     width: 120px;
     margin: 0 8px 0 8px;
 }
+
+@media (min-width: 1000px) {
+    .main-content {
+        padding: 0 50px;
+    }
+
+    .main-header {
+        padding-left: 330px;
+    }
+
+    .stats-collections {
+        background: #fff;
+        padding: 12px 0;
+        min-height: 280px;
+        width: auto;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 1000px) {
+    .main-content {
+        padding: 0;
+    }
+
+    .main-header {
+        padding-left: 6px;
+    }
+
+    .stats-collections {
+        background: #fff;
+        padding: 12px 0;
+        min-height: 280px;
+        width: auto;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+}
+
