--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,16 @@
 <nz-layout class="layout">
-    <nz-header>
+    <nz-header class="main-header">
         <div class="logo"></div>
         <ul nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'" style="line-height: 64px;">
             <li nz-menu-item>nav 1</li>
             <li nz-menu-item>nav 2</li>
             <li nz-menu-item>nav 3</li>
-            <input nz-input placeholder="Basic Usage" size='small' [(ngModel)]="value"/>
+            <!--<input nz-input placeholder="Basic Usage" size='small' [(ngModel)]="value"/>-->
         </ul>
     </nz-header>
-    <nz-content style="padding:0 50px;">
-        <nz-breadcrumb style="margin:16px 0;">
-            <nz-breadcrumb-item>Home</nz-breadcrumb-item>
-            <nz-breadcrumb-item>List</nz-breadcrumb-item>
-            <nz-breadcrumb-item>App</nz-breadcrumb-item>
-        </nz-breadcrumb>
-        <div
-            style="background:#fff; padding: 24px; min-height: 280px; width: auto;max-width: 1200px; margin: 0 auto;">
-            <app-statscard></app-statscard>
+    <nz-content class="main-content">
+        <div class="stats-collections">
+            <app-statscolcards></app-statscolcards>
         </div>
     </nz-content>
     <nz-footer style="text-align: center;">Not affiliated with PLAYERUNKNOWN'S BATTLEGROUNDS, PUBG
