--- a/src/app/page/statscolcards/statscolcards.component.css
+++ b/src/app/page/statscolcards/statscolcards.component.css
@@ -8,7 +8,7 @@ app-statscard {
 .stats-collections {
     margin: auto;
     display: table;
-    width: 100%;
+    width: auto;
 }
 
 @media (max-width: 1000px) {
