--- a/src/app/page/statscolcards/statscolcards.component.html
+++ b/src/app/page/statscolcards/statscolcards.component.html
@@ -1,5 +1,5 @@
 <div class="stats-collections">
-    <app-statscard [scStatsData]='statsData.soloStats'></app-statscard>
-    <app-statscard [scStatsData]='statsData.duoStats'></app-statscard>
-    <app-statscard [scStatsData]='statsData.squadStats'></app-statscard>
+    <app-statscard [scStatsData]='statsData.soloStats' [scNumber]=1></app-statscard>
+    <app-statscard [scStatsData]='statsData.duoStats' [scNumber]=2></app-statscard>
+    <app-statscard [scStatsData]='statsData.squadStats' [scNumber]=4></app-statscard>
 </div>
