:sparkles: add query by season

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
             <li nz-menu-item>nav 1</li>
             <li nz-menu-item>nav 2</li>
             <li nz-menu-item>nav 3</li>
-            <!--<input nz-input placeholder="Basic Usage" size='small' [(ngModel)]="value"/>-->
+            <input id="input-playername" nz-input placeholder="Basic Usage" size='small'
+                   [(ngModel)]="value"/>
         </ul>
     </nz-header>
     <nz-content class="main-content">
