--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,11 @@
         </ul>
     </nz-header>
     <nz-content class="main-content">
-        <div class="stats-collections">
+        <div class="main-page">
             <app-statscolcards></app-statscolcards>
+            <div class="main-page_matches">
+                <app-playermatches></app-playermatches>
+            </div>
         </div>
     </nz-content>
     <nz-footer style="text-align: center;">Not affiliated with PLAYERUNKNOWN'S BATTLEGROUNDS, PUBG
